Register DBus name for kioexec

KLauncher expects kioexec to register org.kde.kioexec on dbus.

REVIEW: 126164
BUG: 353037
FIXED-IN: 5.17.0